Extend javadocs and code cleanup